--- a/spring-boot-restapi/pom.xml
+++ b/spring-boot-restapi/pom.xml
@@ -15,6 +15,7 @@
 		<version.com.ryantenney.metrics>3.1.3</version.com.ryantenney.metrics>
 		<version.io.springfox>2.7.0</version.io.springfox>
 		<version.commons-logging>1.2</version.commons-logging>
+		<version.junit>4.12</version.junit>
 	</properties>
 
 	<parent>
@@ -28,19 +29,24 @@
 
 		<!-- Spring -->
 		<dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-            <exclusions>
-            	<exclusion>
-            		<groupId>org.springframework.boot</groupId>
-            		<artifactId>spring-boot-starter-logging</artifactId>
-            	</exclusion>
-            </exclusions>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-logging</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
 			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
 		</dependency>
 
 		<!-- Logging -->
@@ -61,7 +67,7 @@
 			<artifactId>commons-logging</artifactId>
 			<version>${version.commons-logging}</version>
 		</dependency>
-		
+
 		<!-- Swagger -->
 		<dependency>
 			<groupId>io.springfox</groupId>
@@ -85,7 +91,6 @@
 			<artifactId>metrics-spring</artifactId>
 			<version>${version.com.ryantenney.metrics}</version>
 		</dependency>
-		
 	</dependencies>
 
 	<build>
@@ -117,7 +122,7 @@
 							<Build-Date>${maven.build.timestamp}</Build-Date>
 						</manifestEntries>
 					</archive>
-					
+
 				</configuration>
 			</plugin>
 			<plugin>
